project-1/2048-service.yml
apiVersion: v1
kind: Service
metadata:
  name: 2048-service
  labels:
    name: 2048-app
spec:
  type: ClusterIP
  selector:
    app: 2048-app
  ports:
    - targetPort: 3000
      port: 3000
