project-1/task-service.yml
apiVersion: v1
kind: Service
metadata:
  name: task-service
  labels:
    app: task-app

spec:
  type: ClusterIP
  selector:
    name: task-app
  ports:
    - targetPort: 3000
      port: 3000
