project-1/turist-service.yml
apiVersion: v1
kind: Service
metadata:
  name: turist-service
  labels:
    name: turist
spec:
  type: ClusterIP
  selector:
    app: turist-app
  ports:
    - targetPort: 3000
      port: 3000
